--- a/404.html
+++ b/404.html
@@ -43,25 +43,9 @@
     });
   </script>
   <script src="readtime.js"></script>
-  <style>
-    body {
-        transition: background-color 5s ease; /* Change duration as needed */
-    }
-    .hover-link:hover {
-    background-color: #5F7FFF; /* Desired hover color */
-  }
-
-
-    .whiteiconcolor {color:white;}
-</style>
 
 </head>
-<body style="background-color: grey; color: #FFFFE4;">
-  <script>
-    window.onload = () => {
-        document.body.style.backgroundColor = 'black'; // Change to black when page loads
-    };
-</script>
+<body>
 	
 	<!-- NAVIGATION TOP BAR -->
 	<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="LiberalOrchard" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
@@ -69,7 +53,7 @@
 		<!-- Left-side Logo and Text -->
 		<div style="display: flex; align-items: center;">
 		  <a href="./index.html" class="w3-bar-item w3-left">
-			<img class="logo" src="./assets/Logo_white.svg" alt="Logo">
+			<img class="logo" src="./assets/Logo_black.svg" alt="Logo">
 		  </a>
 		  <a href="./index.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge w3-large">
 			<span class="hide">Liberal Orchard</span> 
@@ -82,10 +66,10 @@
 			About
 		  </a>
 		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity">
-          <svg style="height: 32px; width: 32px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="white" d="M96 64c0-17.7 14.3-32 32-32l320 0 64 0c70.7 0 128 57.3 128 128s-57.3 128-128 128l-32 0c0 53-43 96-96 96l-192 0c-53 0-96-43-96-96L96 64zM480 224l32 0c35.3 0 64-28.7 64-64s-28.7-64-64-64l-32 0 0 128zM32 416l512 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 480c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg>
+          <svg style="height: 32px; width: 32px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="black" d="M96 64c0-17.7 14.3-32 32-32l320 0 64 0c70.7 0 128 57.3 128 128s-57.3 128-128 128l-32 0c0 53-43 96-96 96l-192 0c-53 0-96-43-96-96L96 64zM480 224l32 0c35.3 0 64-28.7 64-64s-28.7-64-64-64l-32 0 0 128zM32 416l512 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 480c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg>
 		  </a>
 		  <a href="https://www.x.com/LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity">
-        <svg style="height: 32px; width: 32px;" xmlns:xlink="http://www.w3.org/2000/svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="white" d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z"/></svg>		  </a>
+        <svg style="height: 32px; width: 32px;" xmlns:xlink="http://www.w3.org/2000/svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="black" d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z"/></svg>		  </a>
 		</div>
 	  </div>
 
@@ -96,26 +80,9 @@
 	<!-- article -->
 	<div class="w3-container center-container w3-margin-bottom">
         <div class="w3-container article-width">
-        <h1 class="smalltexth1 w3-center"><b>Liberal Orchard Essays</b></h1>
-        <img class="w3-image w3-round-large" src="./assets/Article Photos/Liberal.webp"></img>
-            
-        <p class="w3-text-white w3-opacity-min w3-margin-top w3-margin-bottom smalltexth3">By Liberal Orchard | September 15th 2024</p>
+        <h1 class="smalltexth1 w3-center"><b>404 - Webpage not Found</b></h1>
+        <img class="w3-image w3-round-large" src="./assets/timothy-dexter.webp"></img>
 
-            <div class="w3-bar w3-border-bottom w3-margin-bottom articleshares">
-                <div style="display: flex; align-items: center;">
-                <p class="w3-bar-item smalltexth3" style="padding-left: 0px; margin-left: 0;" id="readingtime"></p>
-                </div>
-                <div style="display: flex; align-items: center;">
-                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/populist-poison.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-right">
-                  <svg style="height: 32px; width: 32px;" xmlns:xlink="http://www.w3.org/2000/svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="white" d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z"/></svg>		  </a>
-                </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/populist-poison.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-right">
-                  <svg style="height: 32px; width: 32px;" xmlns:xlink="http://www.w3.org/2000/svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="white" d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"/></svg>                </a>
-                <a href="http://www.liberalorchard.com/populist-poison.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-right copy-shares">
-                  <svg style="height: 32px; width: 32px;" xmlns:xlink="http://www.w3.org/2000/svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="white" d="M192 0c-41.8 0-77.4 26.7-90.5 64L64 64C28.7 64 0 92.7 0 128L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64l-37.5 0C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM112 192l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>                    <span id="tooltip" style="visibility: hidden; position: absolute; bottom: 100%; left: 50%; transform: translate(-50%, 100%); background-color: #000; color: #fff; padding-bottom: 5px; border-radius: 5px;">Link copied!</span>
-                </a>
-                </div>
-            </div>
 
             <!-- Article -->
 
@@ -126,25 +93,12 @@
 
 
               <div class="w3-row center-container">
-                <img class="w3-image" style="width: 25%;" src="./assets/Logo_white.svg"></img>
+                <img class="w3-image" style="width: 25%;" src="./assets/Logo_black.svg"></img>
                 <p class=""><b>By the Liberal Orchard Team</b></p>
             </div>
 
             <br>
 
-
-                                                     <!-- Disqus Universal Code -->
-                                                     <div class = "disqus-width" id="disqus_thread"></div>
-                                                     <script>
-                                                     (function() { // DON'T EDIT BELOW THIS LINE
-                                                     var d = document, s = d.createElement('script');
-                                                     s.src = 'https://liberalorchard.disqus.com/embed.js';
-                                                     s.setAttribute('data-timestamp', +new Date());
-                                                     (d.head || d.body).appendChild(s);
-                                                     })();
-                                                     </script>
-                                                     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                                                   <!-- End of Disqus Universal Code --> 
 
         </div>
 	</div>
