--- a/Donald-Detox.html
+++ b/Donald-Detox.html
@@ -323,6 +323,7 @@
               <br/><br/>- Shut down charity because he used it for personal use, which he legally admitted to <a href="https://ag.ny.gov/press-release/2019/donald-j-trump-pays-court-ordered-2-million-illegally-using-trump-foundation" target="_blank">Click Here</a>
               <br/><br/>- Doesn't pay his rally bills to venues <a href="https://www.nbcnews.com/politics/2024-election/cities-seek-750k-unpaid-bills-trump-campaign-events-rcna174757" target="_blank">Click Here</a>
               <br/><br/>- Does pay police bills either <a href="https://publicintegrity.org/politics/donald-trump-police-cities-bills-maga-rallies/" target="_blank">Click Here</a>
+              <br/><br/>- Trump Media company outsources jobs to Mexico <a href="https://www.propublica.org/article/donald-trump-media-outsourced-jobs-mexico-truth-social" target="_blank">Click Here</a>
               <br/><br/>- Conspired to overturn the election in 2020 (Most of you wont believe this anyway)
               <br/><br/>- I'll add more the more I remember over time :)
             </p> 
