--- a/bidenomics-a-monthly-review-nov-2024.html
+++ b/bidenomics-a-monthly-review-nov-2024.html
@@ -49,67 +49,64 @@
 
 
     <style>
-        .toc-container {
-            width: 250px;
-        }
-        .toc-title {
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-        .overview-table {
-            width: 100%;
-            border-collapse: collapse;
-            font-family: Arial, sans-serif;
-        }
-
-        .overview-table th, .overview-table td {
-            padding: 12px;
-            border-bottom: 1px solid #333;
-        }
-
-        .overview-table th {
-            background-color: #607d8b; /* Dark grey-blue for header */
-            color: white;
-            font-weight: bold;
-            text-align: center;
-        }
-
-        .overview-table .title-row th {
-            background-color: #3e4a52; /* Slightly darker for main title */
-            font-size: 1.2em;
-            text-align: center;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
-        }
-
-        .overview-table .data-point {
-            background-color: #FFF1E5;
-            color: #333;
-            font-weight: bold;
-            text-align: left;
-            border-right: 1px solid #000;
-        }
-
-        .overview-table td {
-            text-align: center;
-            color: #333;
-            border-right: 1px solid #000;
-        }
-
-        /* Alternate row colors for better readability */
-        .overview-table tr:nth-child(even) td {
-            background-color: #f9f9f9;
-        }
-
-        /* Add subtle hover effect for rows */
-        .overview-table tr:hover td {
-            background-color: #e0e0e0;
-        }
-
         /* Rounded corners for the entire table */
         .w3-card-4 {
-            overflow: hidden;
-            border-radius: 8px;
+        overflow: hidden;
+        border-radius: 8px;
+        }
+
+        #eggsD,
+        #gasD,
+        #milkD,
+        #breadD,
+        #meatD,
+        #stockD,
+        #gasD,
+        #rgdpD,
+        #rmanuD,
+        #cpiD,
+        #oilD,
+        #housingD,
+        #rwageD,
+        #employD,
+        #industryD,
+        #laborD,
+        #taxD,
+        #taiffD,
+        #debtD,
+        #deficitD,
+        #ffrD,
+        #msD,
+        #exrD {
+            height: 500px; /* Default height for non-mobile devices */
+        }       
+
+        @media (max-width: 600px) {
+            #eggsD,
+            #gasD,
+            #milkD,
+            #breadD,
+            #meatD,
+            #stockD,
+            #gasD,
+            #rgdpD,
+            #rmanuD,
+            #cpiD,
+            #oilD,
+            #housingD,
+            #rwageD,
+            #employD,
+            #industryD,
+            #laborD,
+            #taxD,
+            #taiffD,
+            #debtD,
+            #deficitD,
+            #ffrD,
+            #msD,
+            #exrD {
+                height: 340px; /* Height for mobile devices */
+            }
         }
     </style>
 
@@ -266,17 +263,18 @@
             <p class="articletext">
             </p> 
 
-            <div id="eggsD" style="width: 100%; height: 500px;"></div>
+            <div id="eggsD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartEggs.js"></script>
 
             <p class="articletext">
+            Testing some text baby
             </p>
 
             <h2 class="w3-margin-top w3-margin-bottom w3-border-bottom" id="milk">Consumer Prices: Milk</h2>
             <p class="articletext">
             </p> 
 
-            <div id="milkD" style="width: 100%; height: 500px;"></div>
+            <div id="milkD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartMilk.js"></script>
 
             <p class="articletext">
@@ -286,7 +284,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="breadD" style="width: 100%; height: 500px;"></div>
+            <div id="breadD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartBread.js"></script>
 
             <p class="articletext">
@@ -296,7 +294,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="meatD" style="width: 100%; height: 500px;"></div>
+            <div id="meatD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartMeat.js"></script>
 
             <p class="articletext">
@@ -306,7 +304,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="stockD" style="width: 100%; height: 500px;"></div>
+            <div id="stockD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartStocks.js"></script>
 
             <p class="articletext">
@@ -316,7 +314,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="gasD" style="width: 100%; height: 500px;"></div>
+            <div id="gasD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartGas.js"></script>
 
             <p class="articletext">
@@ -331,7 +329,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="rgdpD" style="width: 100%; height: 500px;"></div>
+            <div id="rgdpD" style="width: 100%;"></div>
             <script src="/Trumponomics/rGDPchart.js"></script>
 
             <p class="articletext">
@@ -341,7 +339,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="rmanuD" style="width: 100%; height: 500px;"></div>
+            <div id="rmanuD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartRManu.js"></script>
 
             <p class="articletext">
@@ -351,7 +349,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="cpiD" style="width: 100%; height: 500px;"></div>
+            <div id="cpiD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartInflation.js"></script>
 
             <p class="articletext">
@@ -361,7 +359,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="oilD" style="width: 100%; height: 500px;"></div>
+            <div id="oilD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartOil.js"></script>
 
             <p class="articletext">
@@ -371,7 +369,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="housingD" style="width: 100%; height: 500px;"></div>
+            <div id="housingD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartHousing.js"></script>
 
             <p class="articletext">
@@ -381,7 +379,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="rwageD" style="width: 100%; height: 500px;"></div>
+            <div id="rwageD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartRWage.js"></script>
 
             <p class="articletext">
@@ -393,7 +391,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="employD" style="width: 100%; height: 500px;"></div>
+            <div id="employD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartEmployment.js"></script>
 
             <p class="articletext">
@@ -403,7 +401,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="industryD" style="width: 100%; height: 500px;"></div>
+            <div id="industryD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartIndustry.js"></script>
 
             <p class="articletext">
@@ -413,7 +411,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="laborD" style="width: 100%; height: 500px;"></div>
+            <div id="laborD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartLFPRPA.js"></script>
 
             <p class="articletext">
@@ -425,7 +423,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="taxD" style="width: 100%; height: 500px;"></div>
+            <div id="taxD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartTax.js"></script>
 
             <p class="articletext">
@@ -435,7 +433,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="tariffD" style="width: 100%; height: 500px;"></div>
+            <div id="tariffD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartTariff.js"></script>
 
             <p class="articletext">
@@ -445,7 +443,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="debtD" style="width: 100%; height: 500px;"></div>
+            <div id="debtD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartDebtTotal.js"></script>
 
             <p class="articletext">
@@ -455,7 +453,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="deficitD" style="width: 100%; height: 500px;"></div>
+            <div id="deficitD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartFPDeficit.js"></script>
 
             <p class="articletext">
@@ -467,7 +465,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="ffrD" style="width: 100%; height: 500px;"></div>
+            <div id="ffrD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartFFR.js"></script>
 
             <p class="articletext">
@@ -477,7 +475,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="msD" style="width: 100%; height: 500px;"></div>
+            <div id="msD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartMS.js"></script>
 
             <p class="articletext">
@@ -487,7 +485,7 @@
             <p class="articletext">
             </p> 
 
-            <div id="exrD" style="width: 100%; height: 500px;"></div>
+            <div id="exrD" style="width: 100%;"></div>
             <script src="/Trumponomics/chartEXR.js"></script>
 
             <p class="articletext">
