skyurls price change

--- a/skyurls.html
+++ b/skyurls.html
@@ -327,10 +327,10 @@ img{
     <div class="w3-container center-container">
         <h1 class="w3-center">Shop</h1>
         <div class="grid-container center-container">
-                <a href="https://buymeacoffee.com/liberalorchard" target="_blank" class="card">
+                <a href="https://buymeacoffee.com/liberalorchard/membership" target="_blank" class="card">
                     <img src="./assets/marketsdomains.png" alt="Markets domains image">
                     <div class="card-content">
-                    <div class="card-title">.markets Domain for $3/month</div>
+                    <div class="card-title">.markets Domain for $2/month</div>
                     <div class="card-description"><p>
                         socialist.markets<br/>
                         communist.markets<br/>
@@ -339,7 +339,7 @@ img{
                     </p></div>
                     </div>
                 </a>
-                <a href="https://buymeacoffee.com/liberalorchard" target="_blank" class="card">
+                <a href="https://buymeacoffee.com/liberalorchard/membership" target="_blank" class="card">
                     <img src="./assets/gaydomains.png" alt="Item 2">
                     <div class="card-content">
                     <div class="card-title">.gay Domain for $2/month</div>
@@ -351,7 +351,7 @@ img{
                     </p></div>
                     </div>
                 </a>
-                <a href="https://buymeacoffee.com/liberalorchard" target="_blank" class="card">
+                <a href="https://buymeacoffee.com/liberalorchard/membership" target="_blank" class="card">
                     <img src="./assets/beautydomains.png" alt="Item 3">
                     <div class="card-content">
                     <div class="card-title">.beauty Domain for $2/month</div>
@@ -363,7 +363,7 @@ img{
                     </p></div>
                     </div>
                 </a>
-                <a href="https://buymeacoffee.com/liberalorchard" target="_blank" class="card">
+                <a href="https://buymeacoffee.com/liberalorchard/membership" target="_blank" class="card">
                     <img src="./assets/miscdomains.png" alt="Item 4">
                     <div class="card-content">
                       <div class="card-title">Misc Domain for $1/month</div>
@@ -383,7 +383,7 @@ img{
 
   <!-- Centered Button -->
   <div class="w3-center" style="margin-top: 20px;">
-    <a href="https://buymeacoffee.com/liberalorchard" target="_blank" class="w3-button w3-xlarge w3-black w3-border w3-border-white w3-round-large w3-hover-white w3-hover-text-black" style="padding: 10px 20px; text-decoration: none; font-size: 16px;">
+    <a href="https://buymeacoffee.com/liberalorchard/membership" target="_blank" class="w3-button w3-xlarge w3-black w3-border w3-border-white w3-round-large w3-hover-white w3-hover-text-black" style="padding: 10px 20px; text-decoration: none; font-size: 16px;">
       Go to Shop
     </a>
   </div>
