Added new chartTemplate as a base and new csv to track data

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <link rel="icon" type="image/x-icon" href="/assets/Logo_white.svg">    
 
 <title>About Us - Liberal Orchard</title>
-<link rel="stylesheet" href="./stylesheets/standard.css">
+<link rel="stylesheet" href="./stylesheets/standard_new.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <script>
@@ -45,66 +45,53 @@
 
 </head>
 <body>
-	
-	<!-- NAVIGATION TOP BAR -->
-	<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="LiberalOrchard" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-	<div class="w3-bar w3-border-bottom" style="display: flex; align-items: center; justify-content: space-between;">
-		<!-- Left-side Logo and Text -->
-		<div style="display: flex; align-items: center;">
-		  <a href="./index.html" class="w3-bar-item w3-left">
-			<img class="logo" src="./assets/Logo_black.svg" alt="Logo">
-		  </a>
-		  <a href="./index.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge w3-large">
-			<span class="hide">Liberal Orchard</span> 
-		  </a>
-		</div>
-		
-		<!-- Right-side Icons and About -->
-		<div style="display: flex; align-items: center;">
-		  <a href="./about.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">
-			About
-		  </a>
-		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img class="icon" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
-		  </a>
-		  <a href="https://www.x.com/LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img class="icon" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
-		  </a>
-		</div>
-	  </div>
 
-	
-	<div class="w3-row w3-padding w3-margin"></div>	
-
-	
-	<!-- CENTER COLUMN FOR FEED -->
-	<div class="w3-container center-container w3-margin-bottom">
-        <div class="w3-container" style="width: 70%;">
-        <img class="w3-image w3-margin-bottom" src="./assets/aboutus.svg"></img>
-        <p class="w3-margin-top">
-            <b class="bold-col">Welcome to Liberal Orchard!</b> We're a collaborative blog and content organization founded in 2020, with a focus on exploring topics around economics, finance, and politics. Our small but dedicated team of writers and editors is passionate about fostering thoughtful discussions and providing insights into the most pressing issues of our time.
-            <br><br>
-            At Liberal Orchard, we believe in the power of ideas and the importance of civil discourse. Our goal is to create a space where people with diverse backgrounds and perspectives can come together to share their thoughts and engage in constructive conversations. We strive to provide a platform for informed and respectful debate on the issues that matter most.
-            <br><br>
-            Whether you're an expert in economics, a finance enthusiast, or simply someone who wants to stay informed about the latest political developments, we welcome you to join our community. We encourage you to read our posts, leave comments, and share your own ideas and experiences. We believe that by working together and sharing our insights, we can create a more informed and engaged society.
-            <br><br>
-            So why not join us on this exciting journey? We're committed to fostering a collaborative and supportive environment for all our writers, and we're always on the lookout for new voices and perspectives.
-            <br><br>
-            Thank you for visiting Liberal Orchard, and we hope you'll join us in our mission to promote informed and civil discourse on the issues that matter most.
-        </p>
-
-        <div class="w3-row center-container">
-            <img class="w3-image" style="width: 40%;" src="./assets/Logo_black.svg"></img>
-            <p class=""><b>By the Liberal Orchard Team</b></p>
-        </div>
-
-
-        </div>
-	</div>
-
-	<div class="w3-container w3-black w3-padding" style="width: 100%;">
-		<p class="w3-center">@LiberalOrchard</p>
-	</div>
-
+    <header class="site-header">
+      <div class="inner">
+        <a style="text-decoration: none;" href="./index.html"><h1 class="site-title">LIBERAL ORCHARD</h1></a>
+        <nav class="site-nav">
+          <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+          <ul>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="https://github.com/LeopoldN/NewLiberalOrchard" target="_blank"><img class="menu-icon" src="./assets/github.svg" alt="Github icon"></a></li>
+            <li><a href="http://www.liberal.cafe" target="_blank"><img class="menu-icon" src="./assets/mug-saucer-solid.svg" alt="Mug icon"></a></li>
+            <li><a href="https://www.x.com/LiberalOrchard" target="_blank"><img class="menu-icon" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon"></a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  
+    <main class="site-main inner">
+  
+        <div class="article-card">
+            <div class="inner">
+              <img class="article-img" style="border: 0;" src="./assets/aboutus.svg" alt="About us illustration">
+              <p>
+                <b class="bold-col">Welcome to Liberal Orchard!</b> We're a collaborative blog and content organization founded in 2020, with a focus on exploring topics around economics, finance, and politics. Our small but dedicated team of writers and editors is passionate about fostering thoughtful discussions and providing insights into the most pressing issues of our time.
+                <br><br>
+                At Liberal Orchard, we believe in the power of ideas and the importance of civil discourse. Our goal is to create a space where people with diverse backgrounds and perspectives can come together to share their thoughts and engage in constructive conversations. We strive to provide a platform for informed and respectful debate on the issues that matter most.
+                <br><br>
+                Whether you're an expert in economics, a finance enthusiast, or simply someone who wants to stay informed about the latest political developments, we welcome you to join our community. We encourage you to read our posts, leave comments, and share your own ideas and experiences. We believe that by working together and sharing our insights, we can create a more informed and engaged society.
+                <br><br>
+                So why not join us on this exciting journey? We're committed to fostering a collaborative and supportive environment for all our writers, and we're always on the lookout for new voices and perspectives.
+                <br><br>
+                Thank you for visiting Liberal Orchard, and we hope you'll join us in our mission to promote informed and civil discourse on the issues that matter most.
+              </p>
+              <div>
+                <img class="article-img" style="width: 40%; border: 0;" src="./assets/Logo_black.svg" alt="Logo">
+                <p style="text-align: center;"><b>By the Liberal Orchard Team</b></p>
+              </div>
+            </div>
+          </div>
+  
+    </main>
+  
+    <footer class="site-footer">
+      <h2 style="text-align: center;">@LiberalOrchard</h2>
+    </footer>
+  
+    <script src="./feed-script-new.js?v=1"></script>
+  
 </body>
 </html>
+  
