--- a/trump-tracker.html
+++ b/trump-tracker.html
@@ -354,6 +354,7 @@
                       <div>DEPUTY NSC</div><div></div>
                       <div>CIA</div><div></div>
                       <div>DNI</div><div></div>
+                      <div></div><div></div>
                     </div>
                   </div>
                 </div>
